--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,3 +22,37 @@ header {
     background-color: aquamarine;
     border: 2px solid #000;
 }
+
+#title, #answers, #start {
+    border: 5px solid greenyellow;
+}
+
+#title-text {
+    text-align: center;
+    border: 2px solid black;
+}
+
+#start {
+    text-align: center;
+}
+
+#answers {
+    display: flex;
+    /* text-align: center; */
+    justify-content: space-around;
+}
+
+#answers-text {
+    width: 35%;
+    align-self: center;
+    border: 2px solid black;
+}
+
+button {
+    padding: 10px;
+    margin: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    background-color: #76058d;
+    color: white;
+}
