--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,3 +60,8 @@ button {
     background-color: #76058d;
     color: white;
 }
+
+#submit-button, #go-back-button, #clear-scores-button {
+    background-color: #76058d;
+    color: white;
+}
